--- a/W7.ipynb
+++ b/W7.ipynb
@@ -3614,7 +3614,7 @@
     "* connecting back to SO design (specifically badges) and motivations of askers vs. answerers --> what does successful SO usage look like? what does a thriving SO community look like? etc. \n",
     "* considering followup questions \n",
     "\n",
-    "In retrospect, although our initial question led us to get started quickly, it may not have been the most fruitful in regards to demystifying SO behavior. We could have defined better criteria for interesting questions/answers to investigate. However that likely would have involved more sophisticated natural language processing. "
+    "In retrospect, although our initial question led us to get started quickly, it may not have been the most fruitful in regards to demystifying SO behavior. We could have defined better criteria for interesting questions/answers to investigate. However that likely would have involved more sophisticated natural language processing and/or domain specific knowledge (e.g. what's the experience for programming 101 questions, Android dev questions, segfault questions, data visualization questions). "
    ]
   }
  ],
